--- a/OHE+save_model.ipynb
+++ b/OHE+save_model.ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "b1b83543-bf01-4424-af56-4de31a59954e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m X \u001b[38;5;241m=\u001b[39m df1\u001b[38;5;241m.\u001b[39mdrop(columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCar Model_Mercedez Benz C class\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSell Price($)\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     26\u001b[0m y \u001b[38;5;241m=\u001b[39m df1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSell Price($)\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 27\u001b[0m \u001b[43mpredict_car_prices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m \n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Using ColumnTransformer and OneHotEncoder \u001b[39;00m\n\u001b[1;32m     30\u001b[0m categorical_features \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCar Model\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[36], line 15\u001b[0m, in \u001b[0;36mpredict_car_prices\u001b[0;34m(X, y)\u001b[0m\n\u001b[1;32m     12\u001b[0m model \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[1;32m     13\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X, y) \n\u001b[0;32m---> 15\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(model, \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcar_prices_model+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmaxsize\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39mpredict([[\u001b[38;5;241m45000\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m]])) \n\u001b[1;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(model\u001b[38;5;241m.\u001b[39mpredict([[\u001b[38;5;241m86000\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m]]))\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model score = 0.9417050937281083\n",
+      "[36991.31721061]\n",
+      "[11080.74313219]\n",
+      "model score = 0.9417050937281083\n",
+      "[36991.31721061]\n",
+      "[11080.74313219]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sidreddy/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/sidreddy/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/sidreddy/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/sidreddy/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -33,8 +47,9 @@
     "def predict_car_prices(X, y):\n",
     "    model = LinearRegression()\n",
     "    model.fit(X, y) \n",
-    "\n",
-    "    joblib.dump(model, 'car_prices_model+' + randint(1, sys.maxsize))\n",
+    "    print(\"model score = {}\".format(model.score(X, y)))\n",
+    "    \n",
+    "    joblib.dump(model, 'car_prices_model+' + str(randint(1, sys.maxsize)))\n",
     "    \n",
     "    print(model.predict([[45000, 4, 0, 0]])) \n",
     "    print(model.predict([[86000, 7, 0, 1]])) \n",
