--- a/canada_per_capita_income.ipynb
+++ b/canada_per_capita_income.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "d6697f5a-3db4-4cd7-8e01-90a24574f579",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x124836580>]"
+       "[<matplotlib.lines.Line2D at 0x122add8e0>]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -29,6 +29,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn import linear_model \n",
     "\n",
     "df = pd.read_csv(\"/Users/sidreddy/code/py/ML/1_linear_reg/Exercise/canada_per_capita_income.csv\")\n",
